# IntrusionDetectionSystem_ebpf

./: Cargo.toml  README.md
ebpf-networking/: Cargo.toml  build.rs
ebpf-networking-common/: Cargo.toml
ebpf-networking-common/src/: lib.rs
ebpf-networking-ebpf/: Cargo.toml
ebpf-networking-ebpf/src/: main.rs
ebpf-networking/src/: main.rs
