[package]
name = "ebpf-networking-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
ebpf-networking-common = { path = "../ebpf-networking-common" }
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.8"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "ebpf-networking"
path = "src/main.rs"

